# bb-trader-2

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.dev.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.cursor/rules/: architecture.mdc  memory-discipline.mdc  multi-user-cabinets.mdc  pipeline-queues.mdc  prisma-schema.mdc  python-userbot.mdc  railway-deploy.mdc  secrets-and-logs.mdc
apps/api/: README.md  package.json  railway.json  tsconfig.tsbuildinfo
apps/api/src/: app.module.ts  config.module.ts  config.ts  main.ts  prisma.module.ts  settings-resolver.service.ts
apps/api/src/admin/: admin.controller.ts  admin.module.ts  admin.service.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  session.guard.ts  telegram-login.ts
apps/api/src/cabinet-bot/: cabinet-bot.controller.ts  cabinet-bot.module.ts  cabinet-bot.service.ts
apps/api/src/cabinets/: cabinets.controller.ts  cabinets.module.ts  cabinets.service.ts
apps/api/src/dashboard/: dashboard.controller.ts  dashboard.service.ts
apps/api/src/filters/: filters.controller.ts  filters.module.ts  (+1 more)
apps/classifier/: README.md  package.json  railway.json  tsconfig.tsbuildinfo
apps/classifier/src/: classify.ts  config.ts  diagnostics-worker.ts  ingest-worker.ts  logger.ts  main.ts  openrouter.ts  signal-extract.ts
apps/trader/: README.md  package.json  railway.json  tsconfig.tsbuildinfo
apps/trader/src/: config.ts  fanout.ts  lifecycle-worker.ts  logger.ts  main.ts  poll-worker.ts  recalc-worker.ts
apps/userbot/: README.md  package.json  pyproject.toml  railway.json
apps/userbot/scripts/: crypto_contract_check.py  uv-optional.mjs
apps/userbot/src/bb_userbot/: __init__.py  command_worker.py  config.py  crypto.py  db.py  logging_setup.py  main.py  session_manager.py
apps/web/: README.md  next.config.mjs  package.json  railway.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/scripts/: prepare-standalone.mjs  resolve-standalone-dir.mjs  start-web.mjs
docker/: node-base.Dockerfile  userbot.Dockerfile
docs/: cutover-plan.md  legacy-parity-backlog.md  railway-deployment.md
scripts/: check-crypto-contract.mjs
(+46 files in other folders)
